# cosmox

./: .dockerignore  .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  Cross.toml  Dockerfile  README.md  README.zh-CN.md  application.yaml  banner.txt  build.rs
cosmox-api/: Cargo.toml
cosmox-api/src/: api.rs  lib.rs  metadata.rs
cosmox-macros/: Cargo.toml
cosmox-macros/src/: actix_web_error.rs  api_doc.rs  lib.rs  metadata.rs  page.rs  utils.rs
cosmox-plugin-pack/: Cargo.toml
cosmox-plugin-pack/src/: cargo.rs  lib.rs  main.rs  metadata.rs
crates/common/: Cargo.toml
crates/common/src/: default_constants.rs  fs.rs  lib.rs  message.rs  security.rs
crates/cosmox-adapter-ipc/: Cargo.toml
crates/cosmox-adapter-ipc/examples/: client.rs  server.rs
crates/cosmox-adapter-ipc/src/: handler.rs  lib.rs  protocol.rs  server.rs
crates/cosmox-adapter-web/: Cargo.toml
crates/cosmox-adapter-web/src/: lib.rs  message.rs
crates/cosmox-adapter-web/src/controller/: docs_controller.rs  init.rs  library_controller.rs  metadata_controller.rs  mod.rs  path_tree_scanner.rs  plugin_controller.rs  resource_controller.rs  role_permission_controller.rs  scanner_controller.rs  search_controller.rs  system_controller.rs  tag_controller.rs  ui_controller.rs  user_controller.rs
crates/cosmox-adapter-web/src/io/: mod.rs  transfer_controller.rs
crates/cosmox-adapter-web/src/middleware/: auth_middleware.rs
crates/cosmox-agent/: Cargo.toml  test.lst
crates/cosmox-agent/examples/: anime_extractor.rs  translate.rs
crates/cosmox-agent/src/: ai.rs
crates/cosmox-api/: Cargo.toml
crates/cosmox-api/src/: api.rs  lib.rs  metadata.rs
crates/cosmox-api/src/event/: cond.rs  mod.rs  payloads.rs
crates/cosmox-backend-api/: Cargo.toml
crates/cosmox-backend-api/src/: lib.rs  message.rs
crates/cosmox-backend-api/src/api/: init.rs  library.rs  metadata.rs  mod.rs  path_tree.rs  plugin.rs  resource.rs  role_permission.rs  scanner.rs  search.rs  system.rs  tag.rs  ui.rs  user.rs
crates/cosmox-backend-api/src/auth/: access_check.rs  mod.rs
crates/cosmox-backend-api/src/io/: transfer.rs
crates/cosmox-backend-data/: Cargo.toml
crates/cosmox-backend-data/src/: ipc_views.rs  lib.rs
crates/cosmox-backend-data/src/entities/: devices.rs  libraries.rs  libraries_related_tags.rs  library_paths.rs  metadata_indexes.rs  mod.rs  path_mappings.rs  permissions.rs  prelude.rs  resources.rs  resources_related_tags.rs  roles.rs  roles_related_permissions.rs  settings.rs  tag_groups.rs  tags.rs  types.rs  users.rs  users_related_roles.rs
crates/cosmox-backend-data/src/services/: auth.rs  file_service.rs  init_service.rs  libraries_service.rs  metadata_service.rs  mod.rs  resource_service.rs  role_permission_service.rs  scanner_service.rs  search_service.rs  system_service.rs  tag_service.rs  user_service.rs
crates/cosmox-backend-data/tests/: file_service_tests.rs  library_tests.rs  resource_tests.rs  role_permission_tests.rs  search_tests.rs  tag_tests.rs  user_tests.rs
crates/cosmox-configuration/: Cargo.toml
crates/cosmox-configuration/src/: configuration.rs  default.rs  lib.rs
crates/cosmox-ffmpeg/: Cargo.toml
crates/cosmox-ffmpeg/src/: hw_accel.rs  lib.rs  probe.rs  subtitle.rs  tone_mapping.rs  trickplay.rs
crates/cosmox-ffmpeg/tests/: common.rs  hw_accel.rs  probe.rs  transcode.rs
crates/cosmox-macros/: Cargo.toml
crates/cosmox-macros/src/: actix_web_error.rs  api_doc.rs  lib.rs  metadata.rs  page.rs  plugin.rs  rkyv_ipc_view.rs  service.rs  utils.rs
crates/cosmox-plugin-manager/: Cargo.toml
crates/cosmox-plugin-manager/src/: lib.rs  plugin_lifecycle.rs  plugin_loader.rs  plugin_manager.rs  types.rs
crates/cosmox-plugin-manager/tests/: build.sh
crates/cosmox-plugin-pack/: Cargo.toml  README.md
crates/cosmox-plugin-pack/src/: main.rs  metadata.rs
crates/cosmox-plugin-packager/: Cargo.toml
crates/cosmox-plugin-packager/src/: cargo.rs  lib.rs  main.rs
crates/cosmox-scanner/: Cargo.toml
crates/cosmox-scanner/src/: lib.rs  scanner_manager.rs
crates/cosmox-sdk/: Cargo.toml  README.zh-CN.md  build.rs
crates/cosmox-sdk/src/: error.rs  ffi.rs  lib.rs  types.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20260202_000001_create_path_mapping_table.rs  m20260202_000002_create_users_table.rs  m20260202_000003_create_types_table.rs  m20260202_000004_create_libraries_table.rs  m20260202_000005_create_library_path_table.rs  m20260202_000006_create_devices_table.rs  m20260202_000007_create_metadata_indexes_table.rs  m20260202_000008_create_resources_table.rs  m20260202_000009_create_tag_groups_table.rs  m20260202_000010_create_tags_table.rs  m20260202_000011_create_roles_table.rs  m20260202_000012_create_permissions_table.rs  m20260202_000013_create_settings_table.rs  m20260202_000014_create_libraries_related_tags_table.rs  m20260202_000015_create_resources_related_tags_table.rs  m20260202_000016_create_roles_related_permissions_table.rs  m20260202_000017_create_users_related_roles_table.rs  m20260216_000001_insert_roles_and_permissions.rs  main.rs
lib/weaver-orm-generator/: Cargo.toml  README.md
lib/weaver-orm-generator/src/: generator.rs  lib.rs  main.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20260202_000001_create_path_mapping_table.rs  m20260202_000002_create_users_table.rs  m20260202_000003_create_types_table.rs  m20260202_000004_create_libraries_table.rs  m20260202_000005_create_library_path_table.rs  m20260202_000006_create_devices_table.rs  m20260202_000007_create_metadata_indexes_table.rs  m20260202_000008_create_resources_table.rs  m20260202_000009_create_tag_groups_table.rs  m20260202_000010_create_tags_table.rs  m20260202_000011_create_roles_table.rs  m20260202_000012_create_permissions_table.rs  m20260202_000013_create_settings_table.rs  m20260202_000014_create_librarys_related_tags_table.rs  m20260202_000015_create_resources_related_tags_table.rs  m20260202_000016_create_roles_related_permissions_table.rs  m20260202_000017_create_users_related_roles_table.rs  m20260216_000001_insert_roles_and_permisions.rs  main.rs
(+98 files in other folders)
