[package]
name = "cosmox"
description = "cosmox is a powerful, all-in-one platform for multimedia management and expansion. "
version.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true }
common = { workspace = true }
cosmox-adapter-ipc = { workspace = true }
cosmox-adapter-web = { workspace = true }
cosmox-api = { workspace = true }
cosmox-backend-data = { workspace = true }
cosmox-configuration = { workspace = true }
cosmox-macros = { workspace = true }
cosmox-plugin-manager = { workspace = true }
cosmox-scanner = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
moka = { workspace = true, features = ["future"] }
serde = { workspace = true, features = ["alloc", "derive", "rc", "serde_derive", "std"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "smallvec", "fmt", "ansi", "tracing-log", "std"] }

[dev-dependencies]
criterion = { workspace = true }
sqlx-cli = { version = "0.8.6", features = ["mysql"] }

[build-dependencies]
serde = { workspace = true }
serde_yaml = "0.9.34"
wit-bindgen = { workspace = true, features = ["async"] }

[profile.bench]
debug = false

[profile.release]
opt-level = 3
codegen-units = 1
strip = true
panic = "abort"
lto = true

[workspace]
resolver = "2"
members = [ "crates/*" ]

[workspace.package]
version = "0.0.1"
edition = "2024"
keywords = ["media", "web"]
repository = "https://github.com/niniconi/cosmox.git"
license = "GPL-3.0-or-later"
authors = [
  "niniconi"
]

[workspace.dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.10"
actix-multipart = "0.7.2"
actix-web = "4.13.0"
actix-ws = "0.4.0"
anyhow = "1.0.102"
argon2 = "0.5.3"
async-std = { version = "1.13.2" }
bincode = "2.0.1"
bytes = "1.11.1"
casbin = "2.10.1"
chrono = { version = "0.4.41", default-features = false }
clap = "4.6.0"
common = { path = "crates/common" }
config = "0.15.22"
cosmox-adapter-ffi = { path = "crates/cosmox-adapter-ffi" }
cosmox-adapter-ipc = { path = "crates/cosmox-adapter-ipc" }
cosmox-adapter-web = { path = "crates/cosmox-adapter-web" }
cosmox-agent = { path = "crates/cosmox-agent" }
cosmox-api = { path = "crates/cosmox-api" }
cosmox-backend-api = { path = "crates/cosmox-backend-api" }
cosmox-backend-data = { path = "crates/cosmox-backend-data" }
cosmox-configuration = { path = "crates/cosmox-configuration" }
cosmox-macros = { path = "crates/cosmox-macros" }
cosmox-plugin-manager = { path = "crates/cosmox-plugin-manager" }
cosmox-scanner = { path = "crates/cosmox-scanner" }
cosmox-sdk = { path = "crates/cosmox-sdk" }
criterion = "0.8.2"
ffmpeg-next = "8.1.0"
ffmpeg-sys-next = "8.1.0"
flate2 = "1.1.9"
futures = "0.3.32"
futures-util = "0.3.32"
image = "0.25.10"
interprocess = "2.4.2"
ipc-channel = "0.21.0"
jsonwebtoken = { version = "10.2.0", default-features = false }
log = "0.4.22"
lru = "0.16.3"
migration = { path = "crates/migration" }
mlua = "0.11.6"
moka = "0.12.10"
notify = "8.0.0"
otp = "0.2.0"
proc-macro2 = "1.0.106"
pyo3 = "0.28.3"
quote = "1.0.45"
rand = "0.10.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false }
rig-core = "0.35.0"
rkyv = { version = "0.8.16", default-features = false }
schemars = "1.2.1"
scraper = "0.26.0"
sea-orm = { version = "2.0.0-rc" }
sea-orm-migration = { version = "~2.0.0-rc" }
serde = "1.0.228"
serde_json = "1.0.149"
serde_qs = { version = "1.1.1", default-features = false }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", default-features = false }
syn = "2.0.117"
sysinfo = "0.38.4"
tar = "0.4.45"
thiserror = "2.0.18"
tokio = { version = "1.45.1", default-features = false }
tokio-cron-scheduler = "0.15.1"
toml = "1.1.2"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19" }
url = "2.5.8"
utoipa = { version = "5.4.0", default-features = false }
utoipa-actix-web = "0.1.2"
utoipa-scalar = { version = "0.3.0", default-features = false }
uuid = "1.17.0"
validator = { version = "0.20.0", default-features = false }
wasmtime = "39.0.1"
wasmtime-wasi = "39.0.1"
wasmtime-wasi-http = "39.0.1"
wit-bindgen = { version = "0.56.0" }
zip = "8.5.0"

