[package]
name = "cosmox-api"
version.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cosmox-macros = { workspace = true }
log = { workspace = true, features = ["std"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
bincode = { workspace = true }
wit-bindgen = { version = "0.56.0", features = ["async"] }
