[package]
name = "cosmox-plugin-pack"
version.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.48", features = ["derive"] }
flate2 = "1.1.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tar = "0.4.44"
toml = "0.9.2"
zip = "4.3.0"
