[package]
name = "cosmox-plugin-pack"
version.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
flate2 = "1.1.9"
serde_yaml = "0.9.34"
tar = "0.4.45"
toml = "1.1.2"
zip = "8.5.0"
