[package]
name = "cosmox-adapter-ipc"
version.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
common = { workspace = true }
cosmox-backend-api = { workspace = true }
cosmox-backend-data = { workspace = true }
cosmox-configuration = { workspace = true }
cosmox-macros = { workspace = true }
interprocess = { workspace = true, features = ["tokio"] }
rkyv = { workspace = true, features = ["alloc", "bytecheck", "std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
log = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
