[package]
name = "cosmox-agent"
version.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["rustls", "http2", "charset", "system-proxy", "blocking", "json"] }
rig-core = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["alloc", "derive", "rc", "serde_derive", "std"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
