[package]
name = "cosmox-plugin-packager"
version.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
env_logger = "0.11"
flate2 = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
tar = { workspace = true }
toml = { workspace = true }
zip = { workspace = true }
