[package]
name = "cosmox-sdk"
version.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
chrono = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, optional = true, features = ["rustls", "http2", "charset", "system-proxy", "blocking", "json", "cookies"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true, features = ["rt", "rt-multi-thread"] }
thiserror = { workspace = true }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }

[features]
default = ["native", "web"]

# interface features
native = []
ffi = ["dep:tokio"]

# transport features
web = ["dep:reqwest"]
ipc = []
direct = []
