[package]
name = "weaver-orm-generator"
version.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
sqlparser = "0.56.0"

[[bin]]
name = "weaver-orm-generator"
path = "src/main.rs"
